--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "kirandesignerboutique": {
+    "jokerframework": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/kirandesignerboutique",
+            "outputPath": "dist/jokerframework",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -70,18 +70,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "kirandesignerboutique:build"
+            "browserTarget": "jokerframework:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "kirandesignerboutique:build:production"
+              "browserTarget": "jokerframework:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "kirandesignerboutique:build"
+            "browserTarget": "jokerframework:build"
           }
         },
         "test": {
@@ -119,15 +119,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "kirandesignerboutique:serve"
+            "devServerTarget": "jokerframework:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "kirandesignerboutique:serve:production"
+              "devServerTarget": "jokerframework:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "kirandesignerboutique"
+  "defaultProject": "jokerframework"
 }
