--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.1.6",
     "@angular/service-worker": "~10.1.6",
     "bootstrap": "^4.5.3",
+    "firebase": "^7.24.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
